--- a/install
+++ b/install
@@ -3,13 +3,14 @@
 set -e
 
 CONFIG="install.conf.yaml"
-DOTBOT_DIR="dotbot"
 
 DOTBOT_BIN="bin/dotbot"
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
 cd "${BASEDIR}"
-git -C "${DOTBOT_DIR}" submodule sync --quiet --recursive
+git submodule sync --quiet --recursive
 git submodule update --init --recursive
 
-"${BASEDIR}/${DOTBOT_DIR}/${DOTBOT_BIN}" --plugin-dir dotbot-gh-extension -d "${BASEDIR}" -c "${CONFIG}" "${@}"
+"${BASEDIR}/submodules/dotbot/${DOTBOT_BIN}" \
+  --plugin-dir "${BASEDIR}/submodules/dotbot-gh-extension" \
+  -d "${BASEDIR}" -c "${CONFIG}" "${@}"
