feat: add conditional config support with dotbot-if plugin
Integrate dotbot-if submodule to enable hostname-based conditional
configuration loading. Reorganize Hypr override configs into
hostname-specific directories and add gitignore for local overrides
to support multi-machine dotfile management.

Signed-off-by: JoaoCostaIFG <me@joaocosta.dev>

--- a/install
+++ b/install
@@ -13,4 +13,5 @@ git submodule update --init --recursive
 
 "${BASEDIR}/submodules/dotbot/${DOTBOT_BIN}" \
   --plugin-dir "${BASEDIR}/submodules/dotbot-gh-extension" \
+  --plugin-dir "${BASEDIR}/submodules/dotbot-if" \
   -d "${BASEDIR}" -c "${CONFIG}" "${@}"
